test/failing/dupStruct.trunnel

struct x {
  u8 y;
}

struct x {
  u8 y;
}